--- a/index.html
+++ b/index.html
@@ -13,18 +13,17 @@
         <div class="bg bg3"></div>
     </div>
     <div id="app">
-        <div id="title">Tasks</div>
-        <div id="insert">
-            <input v-model="message" id="entry" type="text" placeholder="Write something...">
-            <button v-on:click="add" id="add">+</button>
+        <div id="top">
+            <div id="title">Tasks</div>
+        <input id="entry" maxlength="50" placeholder="Type here" v-model="newTodo" @keydown.enter="addTodo">
         </div>
-        <div id="added">
-            <div class="tasks" v-for="todo in todos">
-                <p>
-                    {{ todo.text }}
-                </p><input type="checkbox" name="" id="">
-            </div>
+        <div id="todos">
+            <span class="todo" v-for="todo in todos" :class="{ completed: todo.completed }">
+                <input type="checkbox" v-model="todo.completed">
+                {{ todo.text }}
+            </span>
         </div>
+        <button id="btnClear" onclick="clearLocalStorage()">Clear all tasks</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="app.js"></script>
