--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="icon.ico"/>
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Tasks</title>
 </head>
