--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@
     <div id="app">
         <div id="top">
             <div id="title">Tasks</div>
-        <input id="entry" maxlength="50" placeholder="Type here" v-model="newTodo" @keydown.enter="addTodo">
-        <button id="add" v-on:click="addTodo">+</button>
+        <input id="entry" maxlength="50" v-model="newTodo" @keydown.enter="addTodo">
+        <button id="add" v-on:click="addTodo">📌</button>
         </div>
         <div id="todos">
-            <span class="todo" v-for="todo in todos" :class="{ completed: todo.completed }">
+            <span class="todo" v-for="(todo, index) in todos" :class="{ completed: todo.completed }">
                 <input type="checkbox" v-model="todo.completed">
                 {{ todo.text }}
+                <button v-on:click="removeTodo(index)" class="delete">❌</button>
             </span>
         </div>
-        <button id="btnClear" onclick="clearLocalStorage()">Clear all tasks</button>
     </div>
+    <button id="btnClear" v-on:click="clearLocalStorage">delete ALL tasks 💀</button>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="app.js"></script>
 </body>
