--- a/index.html
+++ b/index.html
@@ -42,5 +42,8 @@
     <button id="btnClear" v-on:click="clearLocalStorage">delete ALL tasks 💀</button>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="app.js"></script>
+    <script src="dark.js"></script>
+    <script src="todos.js"></script>
+    <script src="clearStorage.js"></script>
 </body>
 </html>
