--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" sizes="196x196" href="icon.ico">
     <link rel="apple-touch-icon" href="icon.ico">
-    <link rel="icon" type="image/png" href="icon.ico"/>
+    <link rel="icon" type="image/png" href="icon.ico" />
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Tasks</title>
 </head>
+
 <body>
     <div id="bg">
         <div class="bg"></div>
@@ -18,14 +20,29 @@
     <div id="app">
         <div id="top">
             <div id="title">Tasks</div>
-            <div id="subtitle">Made with 🖤 by <b>Bruno Peselli</b> <span id="nickname">[PZL]</span></div>
+            <div class="clock">
+                <div id="time-container">
+                    <span id="hrs"></span>
+                    <span>:</span>
+                    <span id="min"></span>
+                    <span>:</span>
+                    <span id="sec"></span>
+                    <span id="session"></span>
+                </div>
+            </div>
+            <div id="subtitle">Made by <b>FARHAN RAYHAN</b> </div>
+
             <div id="actions">
+                <p id="demo">dark mode</p>
                 <label class="switch">
                     <input id="dark" type="checkbox">
                     <span class="slider round"></span>
+
                 </label>
             </div>
-            <input id="entry" maxlength="140" v-model="newTodo" @keydown.enter="addTodo">
+
+            <input id="entry" maxlength="140" v-model="newTodo" @keydown.enter="addTodo"
+                placeholder="Enter Todays  the task.....">
             <button id="add" v-on:click="addTodo">📌</button>
         </div>
         <div id="todos">
@@ -35,15 +52,16 @@
                 <button v-on:click="removeTodo(index)" class="delete">💣</button>
             </span>
         </div>
-        <a href="https://github.com/pzzzl" target="_blank">
-            <svg id="octicon" height="32" viewBox="0 0 16 16" version="1.1" width="32" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path></svg>
-        </a>
+
     </div>
-    <button id="btnClear" v-on:click="clearLocalStorage">delete ALL tasks 💀</button>
+    <button id="btnClear" v-on:click="clearLocalStorage">delete ALL tasks </button>
+
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="app.js"></script>
     <script src="dark.js"></script>
     <script src="todos.js"></script>
     <script src="clearStorage.js"></script>
+    <script src="time.js"></script>
 </body>
+
 </html>
