--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
                     <span id="session"></span>
                 </div>
             </div>
-            <div id="subtitle">Made by <b>FARHAN RAYHAN</b> </div>
 
             <div id="actions">
-                <p id="demo">dark mode</p>
-                <label class="switch">
+                <!-- <p id="demo" >dark mode</p> -->
+                <label class="switch" style="position: absolute;margin-left: 32.4%;margin-top: -6%;">
                     <input id="dark" type="checkbox">
                     <span class="slider round"></span>
 
@@ -55,6 +54,7 @@
 
     </div>
     <button id="btnClear" v-on:click="clearLocalStorage">delete ALL tasks </button>
+    <div id="subtitle" style="margin-top: 40%;margin-left: -15%;">Made by <b>FARHAN RAYHAN</b> </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="app.js"></script>
